--- a/roulettathon-sf/index.html
+++ b/roulettathon-sf/index.html
@@ -16,7 +16,7 @@ body {
   min-height: 100%;
   background: #000 url(../roulette.jpg) no-repeat 50% 50%;
   background-size: cover;
-  color: #fff;
+  color: #f6f6f6;
 }
 
 #content {
@@ -56,7 +56,7 @@ blockquote {
 }
 
 a, a:link, a:visited, a:active {
-  color: #fff;
+  color: #f6f6f6;
   text-decoration: underline;
 }
     </style>
@@ -67,7 +67,7 @@ a, a:link, a:visited, a:active {
       <div class="desc">
         <p>Three Random Pods</p>
         <p>Five Hours<p>
-        <p>Infinite Fun</p>
+        <p>ALL The Fun</p>
       </div>
 
       <hr/>
