--- a/roulettathon-sf/index.html
+++ b/roulettathon-sf/index.html
@@ -62,11 +62,19 @@ a, a:link, a:visited, a:active {
     </style>
   </head>
   <body>
+    <div style="float:left;">
+      <a href="http://www.cocoapods.org"><img src="CocoaPods-Logo-Mini.png" width="72" height="72"></a>
+    </div>
+
+    <div style="float:right;">
+      <a href="https://layer.com"><img src="layer.png" width="72" height="72"></a>
+    </div>
+
     <div id="content">
       <h1>Roulettathon San Francisco</h1>
       <div class="desc">
         <p>Three Random Pods</p>
-        <p>Five Hours<p>
+        <p>Nine Hours<p>
         <p>ALL The Fun</p>
       </div>
 
@@ -74,18 +82,22 @@ a, a:link, a:visited, a:active {
 
       <div class="desc" style="color: #e4403a; font-weight: 800;">
         <p>Saturday, 7th of June 2014</p>
-        <p>at tbd</p>
+        <p>at 10am</p>
       </div>
 
       <p>
-        <a href="http://meetup.com"><img src="rsvp-dummy.png" width="158" height="54"></a>
+        <a href="http://www.meetup.com/CocoaPods-SF/events/180676392/" data-event="180676392" class="mu-rsvp-btn">RSVP</a>
       </p>
 
       <p id="imprint">
+        This event is graciously hosted by <a href="https://layer.com">Layer</a>.
+        <br>
         cocoapods-roulette was developed by <a href="https://twitter.com/hbehrens">Heiko Behrens</a> and <a href="https://twitter.com/sirlantis">Marcel Jackwerth</a> at <a href="http://uikonf.com">UIKonf</a>.
         <br>
         Background image by <a href="https://www.flickr.com/people/37855887@N00">Conor Ogle</a>.
       </p>
+
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s); js.id=id;js.async=true;js.src="https://secure.meetup.com/script/21021123101537681383/api/mu.btns.js?id=a74a4o9ar6ca0btqqmtk1k5uv2";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","mu-bootjs");</script>
     </div>
   </body>
 </html>
