--- a/roulettathon-sf/index.html
+++ b/roulettathon-sf/index.html
@@ -82,7 +82,7 @@ a, a:link, a:visited, a:active {
 
       <div class="desc" style="color: #e4403a; font-weight: 800;">
         <p>Saturday, 7th of June 2014</p>
-        <p>at 10am</p>
+        <p>at 10am at Layer HQ</p>
       </div>
 
       <p>
