--- a/roulettathon-sf/index.html
+++ b/roulettathon-sf/index.html
@@ -82,10 +82,12 @@ a, a:link, a:visited, a:active {
 
       <div class="desc" style="color: #e4403a; font-weight: 800;">
         <p>Saturday, 7th of June 2014</p>
-        <p>at 10am at Layer HQ</p>
+        <p>at 10am at <a href="https://www.google.com/maps/preview?q=470+Alabama+St,+San+Francisco,+CA" style="color: #e4403a;">Layer HQ</a></p>
       </div>
 
       <p>
+        <span style="font-weight: 800;">Space is limited!</span>
+        <br>
         <a href="http://www.meetup.com/CocoaPods-SF/events/180676392/" data-event="180676392" class="mu-rsvp-btn">RSVP</a>
       </p>
 
